--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint:js": "./node_modules/.bin/eslint --ext .tsx,.ts components/ pages/",
+    "lint:js:fix": "npm run lint:js -- --fix",
+    "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "1.13.0",
@@ -13,16 +18,26 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redux": "4.2.0",
     "stripe": "10.14.0",
     "swr": "^2.0.0",
-    "use-shopping-cart": "3.1.2",
-    "redux": "4.2.0"
+    "use-shopping-cart": "3.1.2"
   },
   "devDependencies": {
     "@types/micro": "^7.3.7",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "^18.11.2",
     "@types/react": "^18.0.21",
-    "typescript": "4.8.4"
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.8",
+    "typescript": "^4.8.4"
   }
 }
