--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
+  "lint-staged": {
+    "components/**/*.{js,ts,jsx,tsx}": [
+      "npm run format",
+      "npm run lint:js:fix",
+      "git add"
+    ],
+    "pages/**/*.{js,ts,jsx,tsx}": [
+      "npm run format",
+      "npm run lint:js:fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@stripe/react-stripe-js": "1.13.0",
     "@stripe/stripe-js": "1.42.0",
@@ -37,6 +49,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^4.8.4"
   }
