--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "ignorePatterns": ["postcss.config.js", "tailwind.config.js"],
   "rules": {
     // eslint-config-airbnb（eslint)
     "spaced-comment": "off",
