--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^18.11.2",
     "@types/react": "^18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -39,7 +40,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.8.4"
   },
   "lint-staged": {
