--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "next start",
     "lint:js": "./node_modules/.bin/eslint --ext .tsx,.ts components/ pages/",
     "lint:js:fix": "npm run lint:js -- --fix",
-    "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "1.13.0",
