--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
     "@stripe/react-stripe-js": "1.13.0",
     "@stripe/stripe-js": "1.42.0",
     "micro": "^9.4.1",
@@ -45,6 +46,7 @@
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "prisma": "^4.16.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.8.4"
   },
