--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.1",
     "@stripe/react-stripe-js": "1.13.0",
     "@stripe/stripe-js": "1.42.0",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "latest",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "10.14.0",
