--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "^2.8.8",
     "prisma": "^4.16.1",
     "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "lint-staged": {
@@ -63,5 +64,8 @@
       "npm run lint:js:fix",
       "git add"
     ]
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
