--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "prisma generate && prisma db push && next build",
     "start": "next start",
     "lint:js": "./node_modules/.bin/eslint --ext .tsx,.ts components/ pages/",
     "lint:js:fix": "npm run lint:js -- --fix",
@@ -19,6 +19,7 @@
     "@prisma/client": "^4.16.1",
     "@stripe/react-stripe-js": "1.13.0",
     "@stripe/stripe-js": "1.42.0",
+    "@vercel/postgres": "^0.4.0",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "latest",
