--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,14 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb", "airbnb/hooks", "airbnb-typescript", "prettier"],
+  "extends": [
+    "airbnb",
+    "airbnb/hooks",
+    "airbnb-typescript",
+    "prettier",
+    "plugin:tailwindcss/recommended"
+  ],
+  "plugins": ["tailwindcss"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
@@ -16,6 +23,7 @@
     "arrow-body-style": "off",
     // eslint-config-airbnb（eslint-plugin-import)
     "import/prefer-default-export": "off",
+    "import/extensions": "off",
     // eslint-config-airbnb（eslint-plugin-react）
     "react/require-default-props": "off",
     "react/prop-types": "off",
@@ -33,6 +41,10 @@
       "error",
       { "allowTernary": true }
     ],
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    // eslint-plugin-tailwindcss
+    "tailwindcss/classnames-order": "warn",
+    "tailwindcss/no-custom-classname": "warn",
+    "tailwindcss/no-contradicting-classname": "error"
   }
 }
