--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next",
     "build": "prisma generate && prisma db push && next build",
     "start": "next start",
-    "lint:js": "./node_modules/.bin/eslint --ext .tsx,.ts components/ pages/",
+    "lint:js": "eslint --ext .tsx,.ts src/",
     "lint:js:fix": "npm run lint:js -- --fix",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
