--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
     "dev": "next",
     "build": "prisma generate && prisma db push && next build",
     "start": "next start",
+    "types": "tsc --pretty --noEmit",
     "lint:js": "eslint --ext .tsx,.ts src/",
     "lint:js:fix": "npm run lint:js -- --fix",
+    "format": "prettier --check \"**/*.+(js|json|yml|ts|tsx)\"",
+    "format:fix": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
     "prepare": "husky install",
-    "lint-staged": "lint-staged",
-    "check-types": "tsc --pretty --noEmit",
-    "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js",
-    "format": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
-    "test-all": "npm run check-format && npm run check-lint && npm run check-types"
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -56,12 +54,7 @@
     "typescript": "^4.8.4"
   },
   "lint-staged": {
-    "components/**/*.{js,ts,jsx,tsx}": [
-      "npm run format",
-      "npm run lint:js:fix",
-      "git add"
-    ],
-    "pages/**/*.{js,ts,jsx,tsx}": [
+    "src/**/*.{js,ts,jsx,tsx}": [
       "npm run format",
       "npm run lint:js:fix",
       "git add"
