--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "format": "prettier --check \"**/*.+(js|json|yml|ts|tsx)\"",
     "format:fix": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "npx prisma studio",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "prisma db seed --preview-feature",
+    "prisma:dev": "run-s -l prisma:generate prisma:migrate prisma:seed",
+    "prisma:format": "npx prisma format"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
