--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "prisma db seed --preview-feature",
     "prisma:dev": "run-s -l prisma:generate prisma:migrate prisma:seed",
-    "prisma:format": "npx prisma format"
+    "prisma:format": "npx prisma format",
+    "prisma:erd": "npx prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -36,6 +37,7 @@
     "use-shopping-cart": "3.1.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.2.2",
     "@types/micro": "^7.3.7",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "^18.11.2",
@@ -56,6 +58,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prisma": "^4.16.1",
+    "prisma-erd-generator": "^1.6.2",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
