--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma:seed": "prisma db seed --preview-feature",
     "prisma:dev": "run-s -l prisma:generate prisma:migrate prisma:seed",
     "prisma:format": "npx prisma format",
-    "prisma:erd": "npx prisma generate"
+    "prisma:erd": "npx prisma generate",
+    "prisma:push": "npx prisma db push"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
