--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prisma:dev": "run-s -l prisma:generate prisma:migrate prisma:seed",
     "prisma:format": "npx prisma format",
     "prisma:erd": "npx prisma generate",
-    "prisma:push": "npx prisma db push"
+    "prisma:push": "npx prisma db push",
+    "prisma:reset": "npx prisma migrate reset",
+    "vercel-build": "prisma generate && next build && prisma migrate deploy"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
