--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "prettier": "^2.8.8",
     "prisma": "^4.16.1",
     "prisma-erd-generator": "^1.6.2",
+    "sass": "^1.63.6",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
