--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     }
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
