--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@stripe/stripe-js": "1.42.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/postgres": "^0.4.0",
+    "classnames": "^2.3.2",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "latest",
