--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/postgres": "^0.4.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.0.0",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "latest",
