--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "compile": "tsc --pretty --noEmit",
     "lint:js": "eslint --ext .tsx,.ts src/",
     "lint:js:fix": "npm run lint:js -- --fix",
-    "format": "prettier --check \"**/*.+(js|json|yml|ts|tsx)\"",
-    "format:fix": "prettier --write \"**/*.+(js|json|yml|ts|tsx)\"",
+    "format": "prettier --check \"src/**/*.+(js|json|yml|ts|tsx)\"",
+    "format:fix": "prettier --write \"src/**/*.+(js|json|yml|ts|tsx)\"",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
     "prisma:generate": "prisma generate",
@@ -20,7 +20,9 @@
     "prisma:erd": "npx prisma generate",
     "prisma:push": "npx prisma db push",
     "prisma:reset": "npx prisma migrate reset",
-    "vercel-build": "prisma generate && next build && prisma migrate deploy"
+    "vercel-build": "prisma generate && next build && prisma migrate deploy",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -43,6 +45,15 @@
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.2.2",
+    "@storybook/addon-essentials": "^7.4.1",
+    "@storybook/addon-interactions": "^7.4.1",
+    "@storybook/addon-links": "^7.4.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.1",
+    "@storybook/nextjs": "^7.4.1",
+    "@storybook/react": "^7.4.1",
+    "@storybook/react-vite": "^7.4.1",
+    "@storybook/testing-library": "^0.2.0",
     "@types/micro": "^7.3.7",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "^18.11.2",
@@ -57,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
@@ -65,6 +77,7 @@
     "prisma": "^4.16.1",
     "prisma-erd-generator": "^1.6.2",
     "sass": "^1.63.6",
+    "storybook": "^7.4.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
