--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,23 @@
 {
   "recommendations": [
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
+    "formulahendry.auto-close-tag",
+    "formulahendry.auto-complete-tag",
+    "formulahendry.auto-rename-tag",
     "streetsidesoftware.code-spell-checker",
-    "bradlc.vscode-tailwindcss",
-    "csstools.postcss",
-    "Prisma.prisma"
-  ]
+    "vnaumovs.color-highlight",
+    "usernamehw.errorlens",
+    "dbaeumer.vscode-eslint",
+    "GitHub.vscode-pull-request-github",
+    "eamodio.gitlens",
+    "oderwat.indent-rainbow",
+    "MS-CEINTL.vscode-language-pack-ja",
+    "ritwickdey.LiveServer",
+    "PKief.material-icon-theme",
+    "ionutvmi.path-autocomplete",
+    "esbenp.prettier-vscode",
+    "natqe.reload",
+    "stylelint.vscode-stylelint",
+    "wayou.vscode-todo-highlight"
+  ],
+  "unwantedRecommendations": []
 }
